--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # JDBC Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/practica
+spring.datasource.username=froznar
+spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
 
 # ORM-JPA
